kubernetes/apps/order-api/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: order-api-service

spec:
  selector:
    app: order-api

  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000

  type: ClusterIP
