kubernetes/apps/order-api/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: order-api-ingress

spec:
  ingressClassName: traefik

  rules:
    - host: order-api.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: order-api-service
                port:
                  number: 80
